# thread_local_variable_manager

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  thread_local_variable_manager.sln
Document/doxygen/html/: annotated.html  annotated_dup.js  classes.html  classthread__local__variable__auto-members.html  classthread__local__variable__auto.html  classthread__local__variable__auto.js  classthread__local__variable__auto__coll__graph.md5  classthread__local__variable__auto_a1e5def9c3be5f42d2809c7af6098b8c9_cgraph.md5  classthread__local__variable__auto_a7138c771bd05e0d000dc6b4ed46b0e9f_cgraph.md5  classthread__local__variable__auto_af1bb4fb466942eb2172051f28e3ac159_cgraph.md5  classthread__local__variable__manager-members.html  classthread__local__variable__manager.html  classthread__local__variable__manager.js  classthread__local__variable__manager_a27c104d2ed677cc0dbdfbb6cf37e3c7c_cgraph.md5  classthread__local__variable__manager_a27c104d2ed677cc0dbdfbb6cf37e3c7c_icgraph.md5  classthread__local__variable__manager_a41c763b8fa77ac8274d83f33515ce9c4_cgraph.md5  (+85 more)
Source/: thread_local_variable_manager.h  thread_local_variable_manager.inl
Test/test_00_basic_usage/: CMakeLists.txt  pch.h  test_00_basic_usage.vcxproj  test_00_basic_usage.vcxproj.filters  test_main.cpp
Test/test_01_performance/: CMakeLists.txt  pch.h  test_01_performance.vcxproj  test_01_performance.vcxproj.filters  test_main.cpp
Test/test_02_thread_safety/: ListBox.hpp  Resource.h  Test.rc  stdafx.h  test_02_thread_safety.vcxproj  test_02_thread_safety.vcxproj.filters  test_main.cpp
(+100 files in other folders)
